--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-app",
   "version": "0.1.0",
-  "homepage": "http://nicolasolo.gitgub.io/Solution1",
+  "private": false,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "4.0.0-alpha.1",
